# django-vr-payment

./: .gitignore  CHANGELOG.MD  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
django_vr_payment/: apps.py  fields.py  managers.py  settings.py  urls.py  views.py
django_vr_payment/migrations/: 0001_initial.py  0002_add_webhooks.py  0002_auto_20200824_1937.py
django_vr_payment/models/: __init__.py  core.py  mixins.py  payment.py  webhooks.py
django_vr_payment/templates/vr_payment/: checkout.html
django_vr_payment/utils/: transaction_status.py  webhooks.py
django_vr_payment/wrapper/: __init__.py  checkout.py  transaction.py
