[metadata]
name = django-vr-payment
version = 0.2.8
description = A Django app to handle payment request through vr payment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ParticulateSolutions/django-vr-payment
author = Particulate Solutions GmbH
author_email = tech@particulate.me
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: